2010-09-09  Andreas Kupries  <andreask@activestate.com>

	* graph/tests/ops/adjmatrix.test: Converted to tcltest v2 for
	* graph/tests/ops/components.test: proper independence of the
	* graph/tests/ops/componentof.test: tests. Preparation for
	* graph/tests/ops/bipartite.test: the investigation of Bug
	* graph/tests/ops/kruskal.test: 3062782.
	* graph/tests/ops/prim.test:
	* graph/tests/ops/tarjan.test:

2010-05-25  Andreas Kupries  <andreask@activestate.com>

	* queue.testsuite: Fixed bug in C implementation of 'unget'.
	* queue/m.c: Used bogus variable in assert, hit only when trying
	* ../tcllibc.tcl: to reuse a list Tcl_Obj for the unget
	  buffer. Tcllibc version bumped to 0.3.9. Testsuite extended.

2010-03-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graph/arcshimmer.c: Squash a number of warnings in the C
	* graph/methods.c: implementations of graph, sets, and trees,
	* graph/nodeshimmer.c: using casts, and including missing
	* sets/s.c: headers.
	* tree/m.c:
	* tree/shimmer.c:
	* tree/walk.c:

	* stack_oo.tcl: Remove superfluous 'package require'. Handled by
	  stack.tcl.

2010-03-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* stack_oo.tcl: Tcl implementation of struct::stack based
	* stack.tcl: on TclOO. Available in 8.5+TclOO, and 8.6+.
	* stack.bench: Fixed missing dependency in benchmarks.
	* stack.test: Updated tests (different error messages).
	* stack.testsuite: Bumped version to 1.5.1.
	* stack.man:
	* pkgIndex.tcl:

	* queue_oo.tcl: Tcl implementation of struct::queue based
	* queue.tcl: on TclOO. Available in 8.5+TclOO, and 8.6+.
	* queue.bench: Updated and fixed benchmarks, and tests
	* queue.test: (different error messages). Bumped version
	* queue.testsuite: to 1.4.2.
	* queue.man:
	* pkgIndex.tcl:

	* sets.bench: Updated to allow switching of implementations.

2010-03-16  Andreas Kupries  <andreask@activestate.com>

	* pkgIndex.tcl: Fix version mismatch for struct::stack.
